<resources>
    <string name="app_name">Mystop</string>

    <string name="btn_Iniciarsecion">Iniciar secion</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_loggout">Cerrar secion</string>

    <string name="txt_Correo">Correo Electronico</string>
    <string name="txt_contrasenia">Contraseña</string>
    <string name="txt_validar">Contraseña</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>