<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_Correo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_contrasenia"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/validarcontrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_validar"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registro"
            android:text="@string/btn_registrarse" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>