<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarsecionActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/txt_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_Correo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/text_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_contrasenia"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_iniciarsec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="iniciar"
            android:text="@string/btn_Iniciarsecion" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>